Add images directory and change recipe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    </head>
 
    <body>
-      <h1>Odin Recipes</h1>
-      <a href="recipes/lasagna.html">Lasagna Recipe</a>
+      <h1>Korean Recipes!</h1>
+      <img src="images/south-korea-flag.jpg">
+      <p></p>
+      <a href="recipes/japchae.html">Japchae Recipe</a>
    </body>
 </html>
