--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       <h1>Korean Recipes!</h1>
       <img src="images/south-korea-flag.jpg">
       <p></p>
-      <a href="recipes/japchae.html">Japchae Recipe</a>
+      <ul>
+         <li><a href="recipes/japchae.html">Japchae Recipe</a></li>
+         <li><a href="recipes/bibimbap.html">Bibimbap Recipe</a></li>
+      </ul>
+      
    </body>
 </html>
