--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -32,6 +32,7 @@
             <li>Seasoned bean sprouts</li>
             <li>Shiitake mushrooms</li>
             <li>Carrots</li>
+            <li>Cucumbers</li>
             <li>Fine sea salt</li>
             <li>Steamed rice</li>
             <li>Eggs</li>
@@ -57,10 +58,13 @@
          <li>Mix bibimbap sauce ingredients into a bowl</li>
          <li>Cook spinach, bean sprouts, and shiitake mushrooms</li>
          <li>Peel and julienne carrots</li>
+         <li>Cut cucumbers</li>
          <li>Make fried eggs</li>
          <li>Put rice into a bowl</li>
          <li>Add meat, assorted vegetables, bibimbap sauce, and egg on top</li>
          <li>Mix the ingredients into the bowl</li>
       </ol>
+
+      
    </body>
 </html>
