--- a/recipes/japchae.html
+++ b/recipes/japchae.html
@@ -7,7 +7,7 @@
 
    <body>
       <h1>Japchae Recipe</h1>
-      <img src="../images/japchae.jpg">
+      <img src="../images/japchae-image.webp">
 
       <h3>Description</h3>
       <p>Japchae is a signature Korean noodle dish. It is made with Korean glass 
@@ -50,5 +50,6 @@
          <li>Cook noodles with the sauce</li>
          <li>Add vegetables and meat with noodles</li>
       </ol>
+
    </body>
 </html>
