Add back-to-homepage option for each recipe

--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -65,6 +65,6 @@
          <li>Mix the ingredients into the bowl</li>
       </ol>
 
-      
+      <a href="../index.html">Back</a>
    </body>
 </html>
