--- a/recipes/japchae.html
+++ b/recipes/japchae.html
@@ -51,5 +51,6 @@
          <li>Add vegetables and meat with noodles</li>
       </ol>
 
+      <a href="../index.html">Back</a>
    </body>
 </html>
