--- a/recipes/tteokbokki.html
+++ b/recipes/tteokbokki.html
@@ -41,5 +41,7 @@
          the tteokbokki sauce thickens and looks shiny</li>
          <li>Remove from heat and serve hot</li>
       </ol>
+
+      <a href="../index.html">Back</a>
    </body>
 </html>
